styles/default.css
/* ... */
#top .notifications li:last-of-type {
    margin-bottom: 0px;
}
#top .notifications li.hidden {
    opacity: 0;
}
#top .notifications li .content {
    line-height: 33px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .notifications li .close {
    position: absolute;
    top: 3px;
    right: 5px;
    cursor: pointer;
    font-weight: bold;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .menus {
    float: right;
}
#top .menus .heart {
    display: inline;
    color: #DD0000;
    opacity: 0.8;
    text-shadow: 0 0 5px #FFF;
    font-size: 22px;
    cursor: pointer;
    position: relative;
    top: 2px;
}
#top .menus .spacings,
#top .menus .username,
#top .menus .about,
#top .menus .settings{
    cursor: pointer;
    text-transform: uppercase;
    font-size: 13px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .menus .login-link {
    cursor: pointer;
    font-size: 14px;
    text-transform: uppercase;
    text-decoration: none;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    padding: 5px 9px;
    margin-right: 10px;
    border: 1px solid #8B9594;
    border-radius: 10px 0 0 10px;
    background: rgba(0, 124, 137, 0.2);
}
#top .menus .login-link:hover {
    background: rgba(0, 124, 137, 0.4);
}
#top .menus .login-link:after {
    content: '';
    cursor: default;
    position: absolute;
    display: inline-block;
    width: 25px;
    height: 29px;
    margin: 3px 0px 0px 9px;
    border: 1px solid #8B9594;
    border-radius: 0 10px 10px 0;
    background: -webkit-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: -moz-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: -ms-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: -o-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
}
.left-wrapper {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: absolute;
    top: 0;
    z-index: 5;
    width: 230px;
    height: 100%;
    padding: 85px 0 100px 0; /* #top, 0, #bottom, 0 */
    overflow: hidden;
}
#left {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: relative;
    width: 230px;
    height: 100%;
    padding-bottom: 230px; /* #youtube.height */
    overflow: hidden;
}
#left .menu {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    height: 100%;
    font-size: 13px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    padding: 0 5px 5px 10px;
    overflow-y: scroll;
}
#left .menu .toplist, 
#left .menu .queue,
#left .menu .search,
#left .menu .playlists li {
    cursor: pointer;
    margin-right: 5px;
    padding: 8px 0px 8px 0px;
    border-bottom: 1px dashed rgba(128, 128, 128, 0.5);
}
#left .menu .toplist:before, 
#left .menu .queue:before,
#left .menu .search:before,
#left .menu .playlists li:before {
    content: url(/images/playlist.png);
    margin-right: 3px;
}
#left .menu li.selected {
    background-color: rgba(0, 124, 137, 0.1);
}
#left .menu li.target {
    background-color: rgba(0, 124, 137, 0.4);
}
#left .menu .playlists li.remote {
    position: relative;
    padding-right: 10px;
}
#left .menu .playlists li.remote:after {
    content: "";
    display: block;
    width: 8px;
    height: 8px;
    background: rgba(128, 128, 128, 0.5);
    position: absolute;
    right: 8px;
    top: 14px;
    border-radius: 4px;
}
#left .menu .playlists .new:before {
    content: '+';
    cursor: default;
    position: absolute;
    display: inline-block;
    width: 6px;
    padding: 5px 9px;
    border: 1px solid #8B9594;
    border-radius: 10px 0 0 10px;
    margin-top: -4px; /* .new.padding + border */
    margin-left: -34px; /* .new.padding + border */
    background: -webkit-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: -moz-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: -ms-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: -o-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
}
#left .menu .playlists .new {
    position: relative;
    background: rgba(0, 124, 137, 0.2);
    margin: 10px 0px 5px 24px;
    padding: 3px 8px;
    border-radius: 0px 10px 10px 0px;
    border: 1px solid rgba(128, 128, 128, 0.5);
    border-left: none;
}
#left .menu .playlists .new:hover {
    background: rgba(0, 124, 137, 0.4);
}
#left .menu .playlists .new span {
    cursor: pointer;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    display: inline-block;
    padding: 2px;
    width: 100%;
    height: 100%;
}
#left .menu .playlists .new input[type=text] {
    font-size: 12px;
    display: inline-block;
    padding: 2px 2px 1px 2px;
    width: 90%;
    height: 100%;
}
#left .players {
    height: 230px;
    width: 230px;
    background: #000;
    position: absolute;
    z-index: 30;
}
#left .players .youtube {
    width: 230px;
    height: 230px;
}
/* ... */

